--- a/Day4/Ansible/index.html.j2
+++ b/Day4/Ansible/index.html.j2
@@ -8,5 +8,6 @@
 		<h3>Hostname - {{ansible_hostname}}</h3>
 		<h3>OS - {{ansible_distribution}} v{{ansible_distribution_version}}</h3>
 		<h3>IP Address - {{ip_address.stdout}}
+		<h3>JDK Home - {{JAVA_HOME}}</h3>
 	</body>
 </html>
